--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <p>ビートで魅せる、リズムの達人。</p>
         </div>
         <div class="member">
-            <img src="https://pbs.twimg.com/profile_images/1744979876300627968/O7jp_FoV_400x400.jpg" alt="Guitar">
+            <img src="assets/ikuo-shika.png" alt="Guitar">
             <h3>Guitar (Dora_e_m)</h3>
             <p>魂を震わせるギターサウンド。</p>
         </div>
